small fix footer spacing

--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -7,7 +7,8 @@ footer {
   transform: translateX(-50%);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .container-links {
